--- a/netty-disruptor-client/pom.xml
+++ b/netty-disruptor-client/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.ll</groupId>
+            <artifactId>netty-disruptor-com</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
